--- a/UdemyMicroservices.Catalog/UdemyMicroservices.Catalog.csproj
+++ b/UdemyMicroservices.Catalog/UdemyMicroservices.Catalog.csproj
@@ -9,17 +9,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Products\**" />
+    <Content Remove="Features\Products\**" />
+    <EmbeddedResource Remove="Features\Products\**" />
+    <None Remove="Features\Products\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
+    <PackageReference Include="MongoDB.EntityFrameworkCore" Version="8.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Products\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\..\UdemyMicroservices.Bus\UdemyMicroservices.Bus.csproj" />
     <ProjectReference Include="..\UdemyMicroservives.Shared\UdemyMicroservices.Shared.csproj" />
   </ItemGroup>
 
