--- a/UdemyMicroservices.Catalog/appsettings.Development.json
+++ b/UdemyMicroservices.Catalog/appsettings.Development.json
@@ -2,7 +2,7 @@
 
 
   "MongoOption": {
-    "DatabaseName": "catelog-db",
+    "DatabaseName": "catelog-db10",
     "ConnectionString": "mongodb://root:Password12@localhost:27017"
   },
   "Logging": {
