--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,24 @@
 services:
-  udemymicroservices.catalog:
-    image: microservice.catalog
-    build:
-      context: .
-      dockerfile: UdemyMicroservices.Catalog/Dockerfile
-  mongodb:
-    image: mongo:latest
-    container_name: mongodb
+
+  mongo:
+    image: mongo:8.0-rc
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${username}
+      MONGO_INITDB_ROOT_PASSWORD: ${password}
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+  mongo-express:
+    image: mongo-express:1.0.2-20-alpine3.19
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${username}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${password}
+      ME_CONFIG_MONGODB_URL: mongodb://root:Password12@mongo:27017/
+      ME_CONFIG_BASICAUTH: false
 volumes:
   mongo-data:
