--- a/UdemyMicroservives.Shared/UdemyMicroservices.Shared.csproj
+++ b/UdemyMicroservives.Shared/UdemyMicroservices.Shared.csproj
@@ -7,9 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+
+
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+
+
+      
+    <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
+    <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
   </ItemGroup>
 
 </Project>
