--- a/UdemyMicroservices.Yarp/appsettings.json
+++ b/UdemyMicroservices.Yarp/appsettings.json
@@ -1,11 +1,9 @@
 {
-  "ConnectionStrings": {
-    "Redis": "localhost:6379,password=Password12"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
