signin,signup,signout completed

--- a/UdemyMicroservices.Web/appsettings.Development.json
+++ b/UdemyMicroservices.Web/appsettings.Development.json
@@ -12,7 +12,7 @@
 
       "UserCreateEndpoint": "http://localhost:8080/admin/realms/MyTenant/users",
       "Address": "http://localhost:8080/realms/MyTenant",
-      "ClientId": "Web",
+      "ClientId": "web",
       "ClientSecret": "dzqGej2xl4H7mDmBEgeyzKf5PDun9taq"
     }
   },
