course create/getlist completed

--- a/UdemyMicroservices.Web/appsettings.Development.json
+++ b/UdemyMicroservices.Web/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+
+  "GatewayServiceOption": {
+    "Address": "http://localhost:5215"
+  },
+  "FileServiceOption": {
+
+    "Address": "http://localhost:5282"
+  },
+
   "IdentityOption": {
 
     "MasterTenant": {
