--- a/UdemyMicroservices.Web/UdemyMicroservices.Web.csproj
+++ b/UdemyMicroservices.Web/UdemyMicroservices.Web.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="IdentityModel" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.8" />
     <PackageReference Include="Refit" Version="7.2.1" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.2.1" />
   </ItemGroup>
 
 </Project>
