Authentication and Authorization completed

--- a/UdemyMicroservices.Basket/appsettings.Development.json
+++ b/UdemyMicroservices.Basket/appsettings.Development.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "Redis": "localhost:6379,password=Password12"
   },
+  "IdentityServerOption": {
+    "Address": "http://localhost:8080/realms/MyTenant",
+     "Audience": "basket.api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
