--- a/UdemyMicroservices.Catalog/appsettings.Development.json
+++ b/UdemyMicroservices.Catalog/appsettings.Development.json
@@ -5,6 +5,11 @@
     "DatabaseName": "catelog-db10",
     "ConnectionString": "mongodb://root:Password12@localhost:27017"
   },
+
+  "IdentityServerOption": {
+    "Address": "http://localhost:8080/realms/MyTenant",
+    "Audience": "catalog.api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
