--- a/UdemyMicroservices.Files/appsettings.Development.json
+++ b/UdemyMicroservices.Files/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "IdentityServerOption": {
+    "Address": "http://localhost:8080/realms/MyTenant",
+    "Audience": "file.api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
