--- a/UdemyMicroservices.Payment/appsettings.Development.json
+++ b/UdemyMicroservices.Payment/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+
+
+  "IdentityServerOption": {
+    "Address": "http://localhost:8080/realms/MyTenant",
+    "Audience": "payment.api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
