--- a/UdemyMicroservives.Shared/UdemyMicroservices.Shared.csproj
+++ b/UdemyMicroservives.Shared/UdemyMicroservices.Shared.csproj
@@ -19,7 +19,12 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="MessageHandler\" />
   </ItemGroup>
 
 </Project>
