--- a/UdemyMicroservices.Discount/appsettings.Development.json
+++ b/UdemyMicroservices.Discount/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+
+
+  "IdentityServerOption": {
+    "Address": "http://localhost:8080/realms/MyTenant",
+    "Audience": "discount.api"
+  },
   "MongoOption": {
     "DatabaseName": "discount-db",
     "ConnectionString": "mongodb://root:Password12@localhost:27020"
