--- a/UdemyMicroservices.Order.API/appsettings.Development.json
+++ b/UdemyMicroservices.Order.API/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+
+  "IdentityServerOption": {
+    "Address": "http://localhost:8080/realms/MyTenant",
+    "Audience": "order.api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
