coupon component and basket coupon price calculate completed

--- a/UdemyMicroservices.Web/appsettings.Development.json
+++ b/UdemyMicroservices.Web/appsettings.Development.json
@@ -1,5 +1,7 @@
 {
-
+  "ConnectionStrings": {
+    "Redis": "localhost:6379,password=Password12"
+  },
   "GatewayServiceOption": {
     "Address": "http://localhost:5215"
   },
@@ -23,7 +25,14 @@
       "Address": "http://localhost:8080/realms/MyTenant",
       "ClientId": "web",
       "ClientSecret": "dzqGej2xl4H7mDmBEgeyzKf5PDun9taq"
+    },
+    "ClientTenant": {
+
+      "Address": "http://localhost:8080/realms/MyTenant",
+      "ClientId": "web-client-credential",
+      "ClientSecret": "czFde0aIe1bvIYSGVDeTXHwtW5DWn5o0"
     }
+
   },
   "DetailedErrors": true,
   "Logging": {
