order process 1. section completed

--- a/UdemyMicroservices.Order.API/appsettings.Development.json
+++ b/UdemyMicroservices.Order.API/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "MicroserviceOption": {
+
+    "Payment": {
+      "Address": "http://localhost:5210"
+    }
+
+
+  },
 
   "IdentityServerOption": {
     "Address": "http://localhost:8080/realms/MyTenant",
