--- a/UdemyMicroservices.Order.Application/UdemyMicroservices.Order.Application.csproj
+++ b/UdemyMicroservices.Order.Application/UdemyMicroservices.Order.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\UdemyMicroservices.Bus\UdemyMicroservices.Bus.csproj" />
     <ProjectReference Include="..\UdemyMicroservices.Order.Domain\UdemyMicroservices.Order.Domain.csproj" />
     <ProjectReference Include="..\UdemyMicroservives.Shared\UdemyMicroservices.Shared.csproj" />
