userId type converted guid type

--- a/UdemyMicroservices.Basket/appsettings.Development.json
+++ b/UdemyMicroservices.Basket/appsettings.Development.json
@@ -1,10 +1,19 @@
 {
+
+  "BusOption": {
+    "RabbitMq": {
+      "Address": "localhost",
+      "Port": 5672,
+      "UserName": "root",
+      "Password": "Password12"
+    }
+  },
   "ConnectionStrings": {
     "Redis": "localhost:6379,password=Password12"
   },
   "IdentityServerOption": {
     "Address": "http://localhost:8080/realms/MyTenant",
-     "Audience": "basket.api"
+    "Audience": "basket.api"
   },
   "Logging": {
     "LogLevel": {
