--- a/UdemyMicroservices.Catalog/appsettings.Development.json
+++ b/UdemyMicroservices.Catalog/appsettings.Development.json
@@ -1,5 +1,12 @@
 {
-
+  "BusOption": {
+    "RabbitMq": {
+      "Address": "localhost",
+      "Port": 5672,
+      "UserName": "root",
+      "Password": "Password12"
+    }
+  },
 
   "MongoOption": {
     "DatabaseName": "catelog-db",
