--- a/UdemyMicroservices.Discount/appsettings.Development.json
+++ b/UdemyMicroservices.Discount/appsettings.Development.json
@@ -1,5 +1,12 @@
 {
-
+  "BusOption": {
+    "RabbitMq": {
+      "Address": "localhost",
+      "Port": 5672,
+      "UserName": "root",
+      "Password": "Password12"
+    }
+  },
 
   "IdentityServerOption": {
     "Address": "http://localhost:8080/realms/MyTenant",
