--- a/UdemyMicroservices.Order.API/appsettings.Development.json
+++ b/UdemyMicroservices.Order.API/appsettings.Development.json
@@ -1,11 +1,17 @@
 {
   "MicroserviceOption": {
-
     "Payment": {
       "Address": "http://localhost:5210"
     }
+  },
 
-
+  "BusOption": {
+    "RabbitMq": {
+      "Address": "localhost",
+      "Port": 5672,
+      "UserName": "root",
+      "Password": "Password12"
+    }
   },
 
   "IdentityServerOption": {
