--- a/UdemyMicroservices.Payment/appsettings.Development.json
+++ b/UdemyMicroservices.Payment/appsettings.Development.json
@@ -1,6 +1,13 @@
 {
 
-
+  "BusOption": {
+    "RabbitMq": {
+      "Address": "localhost",
+      "Port": 5672,
+      "UserName": "root",
+      "Password": "Password12"
+    }
+  },
   "IdentityServerOption": {
     "Address": "http://localhost:8080/realms/MyTenant",
     "Audience": "payment.api"
