--- a/UdemyMicroservices.Web/UdemyMicroservices.Web.csproj
+++ b/UdemyMicroservices.Web/UdemyMicroservices.Web.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
     <PackageReference Include="Refit" Version="7.2.1" />
     <PackageReference Include="Refit.HttpClientFactory" Version="7.2.1" />
+    <PackageReference Include="Scrutor" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
