docker compose refactoring

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
-username=root
-password=Password12
+REDIS_PASSWORD=Password12
+REDIS_UI_USERNAME=admin
+REDIS_UI_PASSWORD=Password12
 POSTGRES_DB=keycloak_db
 POSTGRES_USER=keycloak_db_user
 POSTGRES_PASSWORD=keycloak_db_user_password
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=password
+USERNAME=user
+PASSWORD=password
