--- a/UdemyMicroservices.Discount/Dockerfile
+++ b/UdemyMicroservices.Discount/Dockerfile
@@ -11,21 +11,21 @@ EXPOSE 8080
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["UdemyMicroservices.Catalog/UdemyMicroservices.Catalog.csproj", "UdemyMicroservices.Catalog/"]
+COPY ["UdemyMicroservices.Discount/UdemyMicroservices.Discount.csproj", "UdemyMicroservices.Discount/"]
 COPY ["UdemyMicroservices.Bus/UdemyMicroservices.Bus.csproj", "UdemyMicroservices.Bus/"]
 COPY ["UdemyMicroservives.Shared/UdemyMicroservices.Shared.csproj", "UdemyMicroservives.Shared/"]
-RUN dotnet restore "./UdemyMicroservices.Catalog/UdemyMicroservices.Catalog.csproj"
+RUN dotnet restore "./UdemyMicroservices.Discount/UdemyMicroservices.Discount.csproj"
 COPY . .
-WORKDIR "/src/UdemyMicroservices.Catalog"
-RUN dotnet build "./UdemyMicroservices.Catalog.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/UdemyMicroservices.Discount"
+RUN dotnet build "./UdemyMicroservices.Discount.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./UdemyMicroservices.Catalog.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./UdemyMicroservices.Discount.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "UdemyMicroservices.Catalog.dll"]
+ENTRYPOINT ["dotnet", "UdemyMicroservices.Discount.dll"]
