--- a/UdemyMicroservices.Discount/appsettings.Production.json
+++ b/UdemyMicroservices.Discount/appsettings.Production.json
@@ -8,14 +8,13 @@
     }
   },
 
-  "MongoOption": {
-    "DatabaseName": "catelog-db",
-    "ConnectionString": "mongodb://root:Password12@mongo.db.catalog:27017"
-  },
-
   "IdentityServerOption": {
     "Address": "http://keycloak:8080/realms/MyTenant",
-    "Audience": "catalog.api"
+    "Audience": "discount.api"
+  },
+  "MongoOption": {
+    "DatabaseName": "discount-db",
+    "ConnectionString": "mongodb://root:Password12@mongo.db.discount:27017"
   },
   "Logging": {
     "LogLevel": {
