--- a/UdemyMicroservices.Files/appsettings.Production.json
+++ b/UdemyMicroservices.Files/appsettings.Production.json
@@ -7,15 +7,9 @@
       "Password": "Password12"
     }
   },
-
-  "MongoOption": {
-    "DatabaseName": "catelog-db",
-    "ConnectionString": "mongodb://root:Password12@mongo.db.catalog:27017"
-  },
-
   "IdentityServerOption": {
     "Address": "http://keycloak:8080/realms/MyTenant",
-    "Audience": "catalog.api"
+    "Audience": "file.api"
   },
   "Logging": {
     "LogLevel": {
