--- a/UdemyMicroservices.Web/appsettings.Production.json
+++ b/UdemyMicroservices.Web/appsettings.Production.json
@@ -1,14 +1,14 @@
 {
   "ConnectionStrings": {
-    "Redis": "localhost:6379,password=Password12"
+    "Redis": "redis.db:6379,password=Password12"
   },
   "GatewayServiceOption": {
-    "Address": "http://localhost:5215"
+    "Address": "http://yarp.api:8080"
   },
   "FileServiceOption": {
 
-    "Address": "http://localhost:5282",
-    "PublishAddress": "http://localhost:5282"
+    "Address": "http://file.api:8080",
+    "PublishAddress": "http://localhost:5003"
   },
 
   "IdentityOption": {
@@ -16,14 +16,14 @@
     "MasterTenant": {
       "UserName": "admin",
       "Password": "password",
-      "Address": "http://localhost:8080/realms/master",
+      "Address": "http://keycloak:8080/realms/master",
       "ClientId": "admin-cli",
       "ClientSecret": "<none>"
     },
     "Tenant": {
 
-      "UserCreateEndpoint": "http://localhost:8080/admin/realms/MyTenant/users",
-      "Address": "http://localhost:8080/realms/MyTenant",
+      "UserCreateEndpoint": "http://keycloak:8080/admin/realms/MyTenant/users",
+      "Address": "http://keycloak:8080/realms/MyTenant",
       "ClientId": "web",
       "ClientSecret": "EZDTZdt3dcu3bZePBI98ijNg6ybQb2cN"
     }
