--- a/UdemyMicroservices.Order.API/appsettings.Production.json
+++ b/UdemyMicroservices.Order.API/appsettings.Production.json
@@ -1,16 +1,16 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;Database=UdemyMicroserviceOrderDb2;User=Sa;Password=Password12;Trusted_Connection=False;TrustServerCertificate=True;Integrated Security=False"
+    "SqlServer": "Server=sqlserver.db.order,1433;Database=UdemyMicroserviceOrderDb2;User=Sa;Password=Password12;Trusted_Connection=False;TrustServerCertificate=True;Integrated Security=False"
   },
   "MicroserviceOption": {
     "Payment": {
-      "Address": "http://localhost:5210"
+      "Address": "http://payment.api:8080"
     }
   },
 
   "BusOption": {
     "RabbitMq": {
-      "Address": "localhost",
+      "Address": "rabbitmq",
       "Port": 5672,
       "UserName": "root",
       "Password": "Password12"
@@ -18,7 +18,7 @@
   },
 
   "IdentityServerOption": {
-    "Address": "http://localhost:8080/realms/MyTenant",
+    "Address": "http://keycloak:8080/realms/MyTenant",
     "Audience": "order.api"
   },
   "Logging": {
