--- a/UdemyMicroservices.Payment/appsettings.Production.json
+++ b/UdemyMicroservices.Payment/appsettings.Production.json
@@ -1,4 +1,5 @@
 {
+
   "BusOption": {
     "RabbitMq": {
       "Address": "rabbitmq",
@@ -7,15 +8,9 @@
       "Password": "Password12"
     }
   },
-
-  "MongoOption": {
-    "DatabaseName": "catelog-db",
-    "ConnectionString": "mongodb://root:Password12@mongo.db.catalog:27017"
-  },
-
   "IdentityServerOption": {
     "Address": "http://keycloak:8080/realms/MyTenant",
-    "Audience": "catalog.api"
+    "Audience": "payment.api"
   },
   "Logging": {
     "LogLevel": {
