--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -80,6 +80,7 @@
     ports:
       - "5020:8080"
  web:
+    user: root
     image: web.api.image:${VERSION}
     container_name: web.api.container
     build:
@@ -90,5 +91,8 @@
       - ASPNETCORE_HTTP_PORTS=8080
     ports:
       - "5030:8080"
+    volumes:
+     - web-keys-volume:/app/Keys
 volumes:
-  file-api-volume:  
+  file-api-volume: 
+  web-keys-volume:
