--- a/UdemyMicroservices.Order.API/appsettings.Production.json
+++ b/UdemyMicroservices.Order.API/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=sqlserver.db.order,1433;Database=UdemyMicroserviceOrderDb2;User=Sa;Password=Password12;Trusted_Connection=False;TrustServerCertificate=True;Integrated Security=False"
+    "SqlServer": "Server=sqlserver.db.order,1433;Database=UdemyMicroserviceOrderDb2;User=Sa;Password=Password12*;Trusted_Connection=False;TrustServerCertificate=True;Integrated Security=False"
   },
   "MicroserviceOption": {
     "Payment": {
