--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@
     container_name: sqlserver.db.order
     restart: always
     environment:
-      SA_PASSWORD: ${PASSWORD}
+      SA_PASSWORD: ${SA_PASSWORD}
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
