docker compose bug fixed

--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ POSTGRES_PASSWORD=keycloak_db_user_password
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=password
 USERNAME=user
-PASSWORD=password
+PASSWORD=Password12
 SA_PASSWORD=Password12*
 VERSION=v1
