--- a/UdemyMicroservices.Catalog/appsettings.Development.json
+++ b/UdemyMicroservices.Catalog/appsettings.Development.json
@@ -10,7 +10,9 @@
 
   "MongoOption": {
     "DatabaseName": "catelog-db",
-    "ConnectionString": "mongodb://root:Password12@localhost:27030"
+    "ConnectionString": "mongodb://user:Password12@localhost:27030" //mongodb://myuser:Password12@localhost:27030
+
+
   },
 
   "IdentityServerOption": {
