--- a/UdemyMicroservices.Discount/appsettings.Development.json
+++ b/UdemyMicroservices.Discount/appsettings.Development.json
@@ -14,7 +14,7 @@
   },
   "MongoOption": {
     "DatabaseName": "discount-db",
-    "ConnectionString": "mongodb://root:Password12@localhost:27020"
+    "ConnectionString": "mongodb://user:Password12@localhost:27020"
   },
   "Logging": {
     "LogLevel": {
